objects/Gift_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gift Cards</relationshipLabel>
        <relationshipName>Gift_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Gift Cards</relationshipLabel>
        <relationshipName>Gift_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Amount__c</fullName>
        <label>Gift Card Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Card_CCV__c</fullName>
        <label>Gift Card CCV#</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Date_Mailed__c</fullName>
        <label>Gift Card Date Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Number__c</fullName>
        <label>Gift Card Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Tracking_Number__c</fullName>
        <label>Gift Card Tracking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Gift Card</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Gift Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>